--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.datasource.username=root
 #spring.datasource.password=
 
-Ambiente de produccion
+# Ambiente de produccion
 spring.datasource.url=jdbc:mysql://uanofuhpgstlcmog:vUAU03s2PWEPBl0YBYWb@bvnpfkmhtggbenh5uvch-mysql.services.clever-cloud.com:3306/bvnpfkmhtggbenh5uvch
 spring.datasource.username=uanofuhpgstlcmog
 spring.datasource.password=vUAU03s2PWEPBl0YBYWb
